# tibet-triage-mcp

./: LICENSE  README.md  pyproject.toml
src/tibet_triage_mcp/: __init__.py  server.py
