[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-triage-mcp"
version = "0.1.0"
description = "MCP server for tibet-triage — process triage, flare rescue & reproducibility bundles with TIBET provenance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
]
keywords = ["mcp", "tibet", "triage", "airlock", "flare", "reproducibility", "provenance", "humotica"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "tibet-triage>=0.5.0",
]

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-triage-mcp"
Documentation = "https://humotica.com"
Issues = "https://github.com/Humotica/tibet-triage-mcp/issues"

[project.scripts]
tibet-triage-mcp = "tibet_triage_mcp.server:main"
